# default

./: .env.example  .gitignore  QUALITY.md  README.md  agent.py  main.py  pyproject.toml  userdata.py
.github/workflows/: ci.yml
src/: __init__.py  config.py
src/agents/: __init__.py  availability.py  base.py  booking.py  greeting.py  identity.py  motive.py
src/api/: availability_server.py
src/models/: __init__.py  booking.py  patient.py
src/services/: __init__.py  availability.py  booking.py  spelling.py
tests/: test_availability_slots.py
tests/integration/: test_availability_api.py
tests/unit/: test_patient_model.py  test_spelling_service.py
