[project]
name = "ai-tech-test"
version = "0.1.0"
description = "Vocca's AI Tech Test"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "livekit-agents[deepgram,openai,silero,azure,turn-detector]>=1.2.1",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.0",
    "pydantic>=2.11.7",
    "ruff>=0.12.4",
]
